cta is too tall, fix that

--- a/resources/public/css/sass/main.scss
+++ b/resources/public/css/sass/main.scss
@@ -186,7 +186,7 @@ body {
 }
 
 #cta {
-  height: 80vh;
+  height: 450px;
 }
 .global-footer {
   margin-top: 0;
